[package]
name = "app_core_errors"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
persistence_db = { path = "../../persistence/db" }
anyhow = { workspace = true }
sqlx.workspace = true

[lints]
workspace = true
