[package]
name = "app_core_inbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_cache = { path = "../cache" }
app_core_calibration = { path = "../calibration" }
app_core_errors = { path = "../errors" }
app_core_lifecycle = { path = "../lifecycle" }
app_core_targets = { path = "../targets" }
audit = { path = "../../audit" }
calibration_master_detect = { path = "../../calibration/master-detect" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_pathsafe = { path = "../../fs/pathsafe" }
metadata_core = { path = "../../metadata/core" }
metadata_fits = { path = "../../metadata/fits" }
metadata_video = { path = "../../metadata/video" }
metadata_xisf = { path = "../../metadata/xisf" }
patterns = { path = "../../patterns" }
persistence_db = { path = "../../persistence/db" }
sessions = { path = "../../sessions" }
targeting = { path = "../../targeting" }
targeting_resolver = { path = "../../targeting/resolver" }
camino = { workspace = true }
hex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
skymath = "0.3"
sqlx.workspace = true
target-match = "0.3"
# spec 052 P3: the cone-search suggestion use case needs the upstream crate's
# own `ResolvedIdentity` (otype_raw/common_name/aliases, OQ-1/OQ-2 ranking
# inputs) and `PositionResolver` types directly — mirrors the existing
# `app_core_targets` precedent (see that crate's Cargo.toml comment).
simbad-resolver = "0.3.0"
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
