[package]
name = "app_core_lifecycle"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
persistence_db = { path = "../../persistence/db" }
workflow_artifacts = { path = "../../workflow/artifacts" }
serde = { workspace = true }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
