[package]
name = "app_core_lifecycle"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
persistence_calibration = { path = "../../persistence/calibration" }
persistence_core = { path = "../../persistence/core" }
persistence_lifecycle = { path = "../../persistence/lifecycle" }
persistence_plans = { path = "../../persistence/plans" }
persistence_targets = { path = "../../persistence/targets" }
workflow_artifacts = { path = "../../workflow/artifacts" }
serde = { workspace = true }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
