[package]
name = "app_core_projects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_errors = { path = "../errors" }
audit = { path = "../../audit" }
camino = { workspace = true }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_inventory = { path = "../../fs/inventory" }
patterns = { path = "../../patterns" }
persistence_db = { path = "../../persistence/db" }
project_structure = { path = "../../project/structure" }
workflow_profiles = { path = "../../workflow/profiles" }
moka = { workspace = true }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
