[package]
name = "app_core_projects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_cache = { path = "../cache" }
app_core_errors = { path = "../errors" }
# spec 052 P1 (scope expansion, ADVICE): project.create promotes the selected
# canonical target from the shared redb resolve cache into `canonical_target`
# instead of requiring the row to pre-exist (target.resolve no longer writes
# it eagerly).
app_core_targets = { path = "../targets" }
audit = { path = "../../audit" }
camino = { workspace = true }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_inventory = { path = "../../fs/inventory" }
patterns = { path = "../../patterns" }
persistence_calibration = { path = "../../persistence/calibration" }
persistence_core = { path = "../../persistence/core" }
persistence_inbox = { path = "../../persistence/inbox" }
persistence_sessions = { path = "../../persistence/sessions" }
persistence_topology = { path = "../../persistence/topology" }
persistence_lifecycle = { path = "../../persistence/lifecycle" }
persistence_plans = { path = "../../persistence/plans" }
persistence_targets = { path = "../../persistence/targets" }
project_structure = { path = "../../project/structure" }
# #1218: source snapshots read the session key, whose format this crate owns.
sessions = { path = "../../sessions" }
sha2.workspace = true
simbad-resolver = "0.4.0"
workflow_profiles = { path = "../../workflow/profiles" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
contracts_core = { path = "../../contracts/core" }
persistence_core = { path = "../../persistence/core", features = ["test-fixture"] }
persistence_sessions = { path = "../../persistence/sessions", features = ["test-fixture"] }
persistence_topology = { path = "../../persistence/topology", features = ["test-fixture"] }
sqlx.workspace = true
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[lints]
workspace = true
