[package]
name = "app_core_settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_errors = { path = "../errors" }
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
patterns = { path = "../../patterns" }
persistence_db = { path = "../../persistence/db" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid = { workspace = true }
workflow_profiles = { path = "../../workflow/profiles" }

[features]
# Developer-mode surface (spec 021). Gates the `devMode` settings key; release
# binaries must NOT enable this. `app_core`'s `dev-tools` feature forwards here.
dev-tools = []

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tokio.workspace = true

[lints]
workspace = true
