[package]
name = "app_core_settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_cache = { path = "../cache" }
app_core_calibration = { path = "../calibration" }
app_core_errors = { path = "../errors" }
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
patterns = { path = "../../patterns" }
persistence_core = { path = "../../persistence/core" }
persistence_lifecycle = { path = "../../persistence/lifecycle" }
persistence_plans = { path = "../../persistence/plans" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
# "v5" beyond the workspace default ("v4"): deterministic audit `entity_id`
# derivation for settings keys (T122, spec 030 FR-133), same pattern as
# `crates/targeting/Cargo.toml`.
uuid = { version = "1", features = ["serde", "v4", "v5"] }
workflow_profiles = { path = "../../workflow/profiles" }

[features]
# Developer-mode surface (spec 021). Gates the `devMode` settings key; release
# binaries must NOT enable this. `app_core`'s `dev-tools` feature forwards here.
dev-tools = []

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tokio.workspace = true

[lints]
workspace = true
