[package]
name = "app_core_targets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_cache = { path = "../cache" }
app_core_errors = { path = "../errors" }
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
metadata_core = { path = "../../metadata/core" }
metadata_fits = { path = "../../metadata/fits" }
metadata_xisf = { path = "../../metadata/xisf" }
persistence_db = { path = "../../persistence/db" }
sessions = { path = "../../sessions" }
targeting = { path = "../../targeting" }
targeting_resolver = { path = "../../targeting/resolver" }
# spec 052 P1: `target.search` reads the shared redb resolve cache directly
# (`simbad_resolver::Cache`), and in-use promotion touches the crate's own
# `ResolvedIdentity`/`Cache` types at the app-layer commit points.
simbad-resolver = "0.3"
serde_json.workspace = true
sqlx.workspace = true
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio.workspace = true
# spec 035 (T020): the `FakeResolver` test double lives behind the resolver's
# `test-fixture` feature; enable it for offline target.resolve use-case tests.
targeting_resolver = { path = "../../targeting/resolver", features = ["test-fixture"] }

[lints]
workspace = true
