[package]
name = "calibration_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
# spec 042 (T201): ISO-8601 date parsing + Julian-day arithmetic for
# observing-night proximity (replaces the hand-rolled YMD parse + JDN math).
time = { workspace = true }

[lints]
workspace = true
