[package]
name = "contracts_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate-contracts"
path = "src/bin/generate-contracts.rs"

[dependencies]
calibration_core = { path = "../../calibration/core" }
domain_core = { path = "../../domain/core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
