[package]
name = "fs_executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fs_planner = { path = "../planner" }
domain_core = { path = "../../domain/core" }
camino = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
uuid.workspace = true
time.workspace = true
trash.workspace = true
# spec 042 (T206): purely-lexical `.`/`..` collapse for the path-resolution
# gate (replaces the hand-rolled component walk; symlink-safety is unchanged).
path-clean.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
