[package]
name = "fs_executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain_core = { path = "../../domain/core" }
fs_pathsafe = { path = "../pathsafe" }
# write_manifest renders the app-owned project marker via the domain-owned
# `render_marker` (astro-plan-l3y0) instead of duplicating its JSON shape here.
project_structure = { path = "../../project/structure" }
camino = { workspace = true }
serde.workspace = true
tokio = { workspace = true }
tracing.workspace = true
time.workspace = true
trash.workspace = true
# spec 042 (T206): purely-lexical `.`/`..` collapse for the path-resolution
# gate (replaces the hand-rolled component walk; symlink-safety is unchanged).
path-clean.workspace = true
fs4 = { version = "1.1.0", default-features = false, features = ["sync"] }
# Preserve source mtime after cross-volume copy (constitution §II archival fidelity).
filetime = "0.2"
# Atomic temp+rename for cross-volume copy and marker write (GF-3/27).
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
