[package]
name = "fs_inventory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
camino = { workspace = true }
domain_core = { path = "../../domain/core" }
fs_pathsafe = { path = "../pathsafe" }
notify = ">=8,<9"
notify-debouncer-full = ">=0.7,<0.8"
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
