[package]
name = "persistence_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
sea-query.workspace = true
tempfile.workspace = true

[lints]
workspace = true
