[package]
name = "persistence_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
audit_types = { path = "../../audit-types" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
sea-query.workspace = true
tempfile.workspace = true

[features]
# Enables `test_support` helpers for crates that depend on persistence_core
# in their dev-dependencies. Must NOT be enabled in production builds.
test-fixture = []

[lints]
workspace = true
