[package]
name = "persistence_db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
persistence_core = { path = "../core" }
persistence_inbox = { path = "../inbox" }
persistence_lifecycle = { path = "../lifecycle" }
persistence_plans = { path = "../plans" }
persistence_targets = { path = "../targets" }

[lints]
workspace = true
