[package]
name = "persistence_plans"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain_core = { path = "../../domain/core" }
persistence_core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
persistence_core = { path = "../core", features = [] }
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
