[package]
name = "persistence_sessions"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
persistence_core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
persistence_core = { path = "../core", features = ["test-fixture"] }
persistence_sessions = { path = ".", features = ["test-fixture"] }
tempfile.workspace = true
tokio.workspace = true

[features]
# Enables `test_support` helpers for crates that depend on persistence_sessions
# in their dev-dependencies. Must NOT be enabled in production builds.
test-fixture = []

[lints]
workspace = true
