[package]
name = "persistence_targets"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain_core = { path = "../../domain/core" }
persistence_core = { path = "../core" }
sessions = { path = "../../sessions" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
persistence_core = { path = "../core", features = [] }
persistence_lifecycle = { path = "../lifecycle" }
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
